fix: Add container div to remove white space at top of screen

--- a/portfolio/static/kittyclicker/main.css
+++ b/portfolio/static/kittyclicker/main.css
@@ -1,9 +1,21 @@
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
-	margin: 0;
+	margin: 0 0 0 0;
+	width: 100%;
+	height: 100%;
+}
+
+.container {
+	display: flex;
+	flex-wrap: wrap;
 }
 
 #navbar{
-	position: fixed;
+	float: left;
 	max-width: 150px;
 	height: 100%;
 	background-color: #f1f1f1;
@@ -52,8 +64,8 @@ li:active {
 	text-decoration: underline;
 }
 
-.whole{
-	margin-left: 151px;
+.whole {
+	float: left;
 	height: 100%;
 	max-width: 650px;
 }
